Security Authentication changes for REST API
